# wnark-crypto

./: .gitignore  AGENTS.md  Makefile  bench-fr-ntt-range.sh  example.go  example.html  go.mod  go.sum  test-browser.sh
cmd/bls12-381-fp-metal-smoke/: main.go
cmd/bls12-381-fp-vector-gen/: main.go
cmd/bls12-381-fr-metal-smoke/: main.go
cmd/bls12-381-fr-ntt-bench/: main.go
cmd/bls12-381-fr-vector-bench/: main.go
cmd/bls12-381-fr-vector-gen/: main.go
cmd/bls12-381-g1-bases-fixture-gen/: main.go
cmd/bls12-381-g1-metal-smoke/: main.go
cmd/bls12-381-g1-scalar-metal-smoke/: main.go
cmd/bls12-381-g1-scalar-vector-gen/: main.go
cmd/bn254-fp-metal-smoke/: main.go
cmd/bn254-fp-vector-gen/: main.go
cmd/bn254-fr-metal-smoke/: main.go
cmd/bn254-fr-ntt-bench/: main.go
cmd/bn254-fr-ntt-domain-gen/: main.go
cmd/bn254-fr-ntt-metal-smoke/: main.go
cmd/bn254-fr-ntt-vector-gen/: main.go
cmd/bn254-fr-vector-bench/: main.go
cmd/bn254-fr-vector-gen/: main.go
cmd/bn254-fr-vector-metal-smoke/: main.go
cmd/bn254-g1-metal-smoke/: main.go
cmd/bn254-g1-msm-bench/: main.go
cmd/bn254-g1-msm-metal-smoke/: main.go
cmd/bn254-g1-msm-vector-gen/: main.go
cmd/bn254-g1-scalar-metal-smoke/: main.go
cmd/bn254-g1-scalar-vector-gen/: main.go
configs/: curves.json
docs/: BN254_WEBGPU_PLAN.md  CURVEGPU_LAYOUTS.md  CURVE_WEBGPU_PLAN.md  TS_LIBRARY.md
heliax-wasm/: Cargo.toml
poc-gnark-groth16/: README.md  index.html  main.js
poc-wasm/: README.md  bridge.js  index.html  main.js
testdata/: generate.go
web/: README.md  package.json  tsconfig.json
(+290 files in other folders)
